--- a/templates/movieList.html
+++ b/templates/movieList.html
@@ -1,51 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix - Profile</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-</head>
-<body class='font-primary'>
-    <nav class="flex justify-between items-center py-3 px-4 fixed w-full z-50">
-        <div class="w-6/12">
-            <img src="assets/netflix.png" alt="logo" class="w-5/12 md:w-2/12">
-        </div>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+Netflix 
+{% endblock title %}
 
-        <div>
-            <button class='bg-primary_red py-1 px-3 text-white md:text-lg rounded-md'>
-                Log out
-            </button>
-        </div>
-        
-    </nav>
+{% block others %}
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+
+{% endblock others %}
+{% block content %}
+
+
+    {% include 'partials/navbar.html' %}
     <main class='bg-primary_black min-h-screen w-full'>
-        <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex justify-end items-end bg-cover" style="background-image: url('assets/movie.webp');">
+        <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex  items-end bg-cover" style="background-image: url('{% static 'movie.webp' %}');">
             <div>
                 <h2 class="text-6xl font-semibold text-white my-4">
-                    Vikings
+                    {{show_case.title}}
                 </h2>
                 <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus repellendus odit perspiciatis nostrum culpa exercitationem quis. Ab obcaecati odio minus. Dolorum sapiente eaque, repellendus ea fugiat amet fuga libero at!
+                    {{show_case.description | slice:":50"}}...
+                    {% lorem 1 %}
                 </p>
                 <div class="flex my-4">
+                    <a href="{% url 'core:play' movie_id=show_case.uuid %}">
+                    
+                        <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+                            <ion-icon name="play" class="text-2xl"></ion-icon>
+                            <span class="ml-3 font-medium " >
+                                Play
+                            </span>
+                        </button>
+                    </a>
 
-                    <button class="flex items-center bg-white py-2 px-5 rounded-md">
-                        <ion-icon name="play" class="text-2xl"></ion-icon>
-                        <span class="ml-3 font-medium">
-                            Play
-                        </span>
-                    </button>
+                    <a href="{% url 'core:show_det' movie_id=show_case.uuid %}">
+                        <button class="ml-4 text-white flex items-center bg-gray-500 bg-opacity-80 py-2 px-5 rounded-md">
+                        
+                            <ion-icon name="information-circle-outline" class="text-2xl" ></ion-icon>
+                            <span class="ml-3 font-medium">
+                                More Info
+                            </span>
+                        </button>
+                    
+                    </a>
     
-                    <button class="ml-4 text-white flex items-center bg-gray-500 bg-opacity-80 py-2 px-5 rounded-md">
-                       
-                        <ion-icon name="information-circle-outline" class="text-2xl" ></ion-icon>
-                        <span class="ml-3 font-medium">
-                            More Info
-                        </span>
-                    </button>
                 </div>
             </div>
         </section> 
@@ -54,30 +52,18 @@
                 <h2 class="text-gray-200 text-2xl font-medium">
                     Popular on Netflix
                 </h2>
-                <div class="flex justify-center  items-center min-w-full  movie_lis">
-                    <div class=" h-40 m-4  bg-blue-500 flex-shrink-0 rounded-md cursor-pointer w-40">
+                <div class="flex   items-center min-w-full  movie_lis">
+                    {% for movie in movies %}
+                    
+                        <a href="{% url 'core:show_det' movie_id=movie.uuid %}">
+                            <div class=" h-40 m-4  bg-blue-500 overflow-hidden flex-shrink-0 rounded-md cursor-pointer w-40">
+                                <img src="{{movie.flyer.url}}" class="w-full h-full " alt="">
+                            </div>
                         
-                    </div>
+                        </a>
+                    {% endfor %}
 
-                    <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer w-40" >
-        
-                    </div>
-
-                    <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer w-40" >
-        
-                    </div>
-
-                    <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer w-40" >
-        
-                    </div>
-
-                    <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer overflow-hidden w-40" >
-                        <img src="assets/movie.webp" class="w-full h-full " alt="">
-                    </div>
-
-                    <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer w-40" >
-        
-                    </div>
+                   
 
                 
                 </div>
@@ -85,5 +71,4 @@
         </section>
         
     </main>
-</body>
-</html>
+{% endblock content %}
